# adk-katas

./: .env.example  .gitignore  README.md  dev.sh  generate_katas.py  kata_content.py  kata_helpers.py  pyproject.toml  requirements.txt  server.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  router.tsx
frontend/src/components/: ChatPanel.tsx  CheckPanel.tsx  CodeEditor.tsx  Layout.tsx  Markdown.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  theme.ts
notebooks/: kata_01_hello_agent.ipynb  kata_02_function_tools.ipynb  kata_03_structured_returns.ipynb  kata_04_sessions_state.ipynb  kata_05_callbacks_guardrails.ipynb  kata_06_multi_agent.ipynb  kata_07_agent_as_tool.ipynb  kata_08_workflow_agents.ipynb  kata_09_evaluation.ipynb  kata_10_builtin_tools.ipynb  kata_11_mcp_tools.ipynb  kata_12_long_running_tools.ipynb  kata_13_multi_provider_models.ipynb  kata_14_memory_artifacts.ipynb  kata_15_planners.ipynb  kata_16_streaming.ipynb  kata_17_iterative_refinement.ipynb  kata_18_eval_metrics.ipynb
solutions/: kata_01_hello_agent.py  kata_02_function_tools.py  kata_03_structured_returns.py  kata_04_sessions_state.py  kata_05_callbacks_guardrails.py  kata_06_multi_agent.py  kata_07_agent_as_tool.py  kata_08_workflow_agents.py  kata_09_evaluation.py  kata_10_builtin_tools.py  kata_11_mcp_tools.py  kata_12_long_running_tools.py  kata_13_multi_provider_models.py  kata_14_memory_artifacts.py  kata_15_planners.py  kata_16_streaming.py  kata_17_iterative_refinement.py  kata_18_eval_metrics.py
tools/: city_tools.py
(+3 files in other folders)
