[project]
name = "adk-katas"
version = "0.1.0"
description = "Interactive katas for learning Google's Agent Development Kit (ADK)"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.2.0",
    "litellm>=1.88.1",
    "mcp>=1.27.2",
]

[dependency-groups]
katas = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
]

[tool.uv]
# Install the notebook tooling by default so `uv sync` / `uv run` set up
# everything (backend + notebook generation) for a fresh clone.
default-groups = ["katas"]
